--- a/v7-mediarouter/project.properties
+++ b/v7-mediarouter/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=../android-support-v7-appcompat
+android.library.reference.1=../v7-appcompat
