--- a/v7-mediarouter/project.properties
+++ b/v7-mediarouter/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
+target=android-L
 android.library=true
+android.library.reference.1=../v7-appcompat
